# remembrant

./: AGENTS.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs  mcp_server.rs  web_dashboard.html
desktop/src/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  main.rs
docs/: HIGH_ROI_FEATURES.md  VISION.md
engine/: Cargo.toml
engine/src/: code_analysis.rs  config.rs  consolidate.rs  context.rs  detect.rs  distill.rs  embed_pipeline.rs  embedding.rs  graph_builder.rs  hybrid_search.rs  lib.rs  pipeline.rs  progressive.rs  repo_embed.rs  semantic_scorer.rs  semantic_tree.rs  watcher.rs  xpath_query.rs
engine/src/ingest/: adapter.rs  claude.rs  codex.rs  gemini.rs  mod.rs  native_adapters.rs  sqlite_adapter.rs
engine/src/store/: duckdb.rs  graph.rs  lance.rs  mod.rs
engine/tests/: integration_test.rs
resources/: com.remembrant.daemon.plist
