[package]
name = "remembrant"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Remembrant: shared persistent memory for coding agents"

[[bin]]
name = "rem"
path = "src/main.rs"

[dependencies]
remembrant-engine = { path = "../engine" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
axum.workspace = true
tower-http.workspace = true
uuid.workspace = true

[features]
default = []
code-analysis = ["remembrant-engine/code-analysis"]
