[package]
name = "remembrant-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Remembrant desktop dashboard"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
remembrant-engine = { path = "../../engine" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
chrono.workspace = true
dirs.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
